Fixed broken CSS

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -45,7 +45,6 @@
 }
 
 .nav-home {
-    position: fixed;
     margin-top: 60px;
     margin-left: var(--side-margins);
 }
